--- a/style.css
+++ b/style.css
@@ -82,8 +82,7 @@ html body {
     text-decoration: none;
 }
 .table-main{
-    width: 80%;
-    margin: 0 auto;
+    width: 100%;
     overflow: auto;
 }
 .table{
@@ -91,21 +90,21 @@ html body {
     border-collapse: separate;
     border-spacing: 0 15px;
     min-width: 800px;
+
 }
 td,th{
-    text-align: left;
+    text-align: center;
     padding: 5px 8px;
 }
 th{
     background: #42515f;
     border-radius: 3px 3px 0px 0px;
-    text-align: left;
+    text-align: center;
     font: normal normal medium 18px/24px Roboto;
-    letter-spacing: 0px;
+    letter-spacing: 1px;
     color: #ffffff;
     text-transform: uppercase;
     opacity: 1;
-    border: 0px solid #dddddd;
 }
 tr:not(:first-child){
     background: #ffffff 0% 0% padding-box;
