--- a/form_style.css
+++ b/form_style.css
@@ -2,8 +2,8 @@ body{
     background:linear-gradient(to left,#0f2027,#203a43,#2c5364);
  }
  form{
-     width: 300px;
-     margin: 20vh auto 0 auto;
+     width: 500px;
+     margin: 10vh auto 0 auto;
      padding: 19px;
      background-color: whitesmoke;
      border-radius: 4px;
@@ -13,9 +13,13 @@ body{
      color: #0f2027;
      text-align: center;
  }
+ form label{
+    padding-bottom: 5px;
+    padding-top: 5px;
+ }
  button{
      background-color: rgb(41, 57, 194);
-     margin: 10px;
+     margin: 1px;
      padding: 10px;
      width: 100%;
      color: white;
@@ -30,10 +34,29 @@ body{
      border: 2px solid #f0f0f0;
      border-radius: 4px;
      display: block;
-     font-size: 12px;
+     font-size: 16px;
      padding: 7px;
      width: 100%;
  }
  .input-control input:focus{
      outline: 0;
  }
+ .avatar {
+    vertical-align: middle;
+    display: flex;
+    flex-direction: row;
+    height: 40px;
+    padding-top: 10px;
+}
+.dept{
+    display: flex;
+    flex-direction: row;
+}
+.dept input
+{
+    width: 5%;
+
+}
+.dept label{
+    padding-right: 1em;
+}
