--- a/style.css
+++ b/style.css
@@ -1,42 +1,50 @@
-*{
+* {
     box-sizing: border-box;
 }
+
 html body {
     margin: 0;
     height: 100%;
 }
-.header{
+
+.header {
     padding: 15px 0;
     background-color: #ffffff;
 }
-.header-content{
+
+.header-content {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     border: 0px solid green;
 }
-.logo-content{
+
+.logo-content {
     display: flex;
     flex-direction: row;
     align-items: center;
     border: 0px solid green;
     width: 80%;
 }
-.logo-content img{
+
+.logo-content img {
     border: solid 0px #42515f;
 }
-.emp-text{
- font:normal normal bold 20px/25px Montserrat; 
- font-family: "Montserrat" ,sans-serif;
- letter-spacing: 0px;
- color: #82a70c;
- text-transform: capitalize;  
+
+.emp-text {
+    font: normal normal bold 20px/25px Montserrat;
+    font-family: "Montserrat", sans-serif;
+    letter-spacing: 0px;
+    color: #82a70c;
+    text-transform: capitalize;
 }
-.emp-payroll{
+
+.emp-payroll {
     color: #42515f;
 }
-.main-content{
+
+.main-content {
     display: flex;
     flex-direction: column;
     min-height: calc(100vh-80px);
@@ -44,7 +52,8 @@ html body {
     padding: 30px 0 10px;
     box-sizing: border-box;
 }
-.header-content{
+
+.header-content {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -53,22 +62,25 @@ html body {
     margin: 0 auto;
     padding-bottom: 25px;
 }
-.emp-detail-text{
+
+.emp-detail-text {
     font: normal normal bold 24px/25px Roboto;
     letter-spacing: 0;
     opacity: 1;
     color: #42515f;
 }
-.emp-count{
+
+.emp-count {
     background-color: #82a70c;
     color: #ffffff;
     border-radius: 42%;
-    font-size:16px;
+    font-size: 16px;
     width: 26px;
     text-align: center;
     display: inline-block;
 }
-.add-button{
+
+.add-button {
     font: normal normal normal 22px/29px Roboto;
     letter-spacing: 0px;
     color: #ffffff;
@@ -81,22 +93,27 @@ html body {
     cursor: pointer;
     text-decoration: none;
 }
-.table-main{
+
+.table-main {
     width: 100%;
     overflow: auto;
 }
-.table{
+
+.table {
     width: 100%;
     border-collapse: separate;
     border-spacing: 0 15px;
     min-width: 800px;
 
 }
-td,th{
+
+td,
+th {
     text-align: center;
     padding: 5px 8px;
 }
-th{
+
+th {
     background: #42515f;
     border-radius: 3px 3px 0px 0px;
     text-align: center;
@@ -106,28 +123,34 @@ th{
     text-transform: uppercase;
     opacity: 1;
 }
-tr:not(:first-child){
+
+tr:not(:first-child) {
     background: #ffffff 0% 0% padding-box;
     border: 1px solid #e3e3e3;
     border-radius: 3px;
 }
-td{
+
+td {
     font: normal normal normal 14px/21px Roboto;
     letter-spacing: 0px;
     color: #3d323d;
     opacity: 1;
 }
-td:first-child{
+
+td:first-child {
     display: flex;
     align-items: center;
 }
-td img:first-child{
+
+td img:first-child {
     margin-right: 18px;
 }
-td img{
+
+td img {
     cursor: pointer;
 }
-.dept-label{
+
+.dept-label {
     background-color: #e9fea5;
     border-radius: 40%;
     width: fit-content;
@@ -138,6 +161,7 @@ td img{
     font-weight: 300;
     margin-bottom: 8px;
 }
+
 .avatar {
     vertical-align: middle;
     display: flex;
@@ -145,4 +169,128 @@ td img{
     height: 60px;
     padding-top: 4px;
     border-radius: 40px;
+}
+
+#abc {
+    width: 100%;
+    height: 100%;
+    opacity: .95;
+    top: 0;
+    left: 0;
+    display: none;
+    position: fixed;
+    background-color: #313131;
+    overflow: auto
+}
+
+img#close {
+    position: absolute;
+    right: -14px;
+    top: -14px;
+    cursor: pointer
+}
+
+div#popupContact {
+    position: absolute;
+    left: 50%;
+    top: 17%;
+    margin-left: -202px;
+    font-family: 'Raleway', sans-serif
+}
+
+#edit_form {
+    max-width: 500px;
+    height: 500px;
+    min-width: 250px;
+    padding: 10px 50px;
+    border: 2px solid gray;
+    border-radius: 10px;
+    font-family: raleway;
+    background-color: #fff
+}
+
+p {
+    margin-top: 30px
+}
+
+h2 {
+    background-color: #FEFFED;
+    padding: 20px 35px;
+    margin: -10px -50px;
+    text-align: center;
+    border-radius: 10px 10px 0 0
+}
+
+hr {
+    margin: 10px -50px;
+    border: 0;
+    border-top: 1px solid #ccc
+}
+
+input[type=text] {
+    width: 82%;
+    padding: 10px;
+    margin-top: 30px;
+    border: 1px solid #ccc;
+    padding-left: 40px;
+    font-size: 16px;
+    font-family: raleway
+}
+
+#name {
+    background-image: url(../images/name.jpg);
+    background-repeat: no-repeat;
+    background-position: 5px 7px
+}
+
+#email {
+    background-image: url(../images/email.png);
+    background-repeat: no-repeat;
+    background-position: 5px 7px
+}
+
+textarea {
+    background-image: url(../images/msg.png);
+    background-repeat: no-repeat;
+    background-position: 5px 7px;
+    width: 82%;
+    height: 95px;
+    padding: 10px;
+    resize: none;
+    margin-top: 30px;
+    border: 1px solid #ccc;
+    padding-left: 40px;
+    font-size: 16px;
+    font-family: raleway;
+    margin-bottom: 30px
+}
+
+#submit {
+    text-decoration: none;
+    width: 100%;
+    text-align: center;
+    display: block;
+    background-color: #00ffee;
+    color: #fff;
+    border: 1px solid #FFCB00;
+    padding: 10px 0;
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: 5px
+}
+
+span {
+    color: red;
+    font-weight: 700
+}
+
+button {
+    width: 10%;
+    height: 45px;
+    border-radius: 3px;
+    background-color: #cd853f;
+    color: #fff;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    cursor: pointer
 }
